Bug 1045231 - Namespace nrAppKit's htonll. r=abr

This avoids conflicts with any system-provided versions, like
on Apple MacOS X 10.10.