media/mtransport/third_party/nrappkit/src/util/byteorder.h
@@ -39,9 +39,9 @@
 #ifndef _byteorder_h
 #define _byteorder_h
 
-UINT8 htonll(UINT8 hostlonglong);
+UINT8 nr_htonll(UINT8 hostlonglong);
 
-UINT8 ntohll(UINT8 netlonglong);
+UINT8 nr_ntohll(UINT8 netlonglong);
 
 #endif
 
